
Severity   : normal
Bugzilla   : 15278
Description: fix build on ppc32
Details    : compile code with -m64 flag produce wrong object file for ppc32.

Severity   : normal
Bugzilla   : 14803
Description: Don't update lov_desc members until making sure they are valid
Details    : When updating lov_desc members via proc fs, need fix their
             validities before doing the real update.

-------------------------------------------------------------------------------


04-26-2008  Sun Microsystems, Inc.
       * version 1.6.5
       * Support for kernels:
        2.6.5-7.311 (SLES 9),
        2.6.9-67.0.7.EL (RHEL 4),
        2.6.16.54-0.2.5 (SLES 10),
        2.6.18-53.1.14.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
        2.6.22.14 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to problems with nested symlinks and FMODE_EXEC (bug 12652),
        we do not recommend using patchless RHEL4 clients with kernels
        prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).
       * A new quota file format has been introduced in 1.6.5.
         The format conversion from prior releases is handled transparently,
	 but releases older than 1.4.12/1.6.5 will not understand this new
	 format.  The automatic format conversion can be avoided by running
	 the following command on the MDS:
	 	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	 For more information, please refer to bugzilla 13904.

Severity   : normal
Bugzilla   : 12191
Description: add message levels for liblustreapi

Severity   : normal
Bugzilla   : 13380