@@ -49,6 +49,10 @@ Description: Don't update lov_desc members until making sure they are valid
 Details    : When updating lov_desc members via proc fs, need fix their
              validities before doing the real update.
 
+Severity   : normal
+Bugzilla   : 15212
+Description: Reinitialize optind to 0 so that interactive lfs works in all cases
+
 -------------------------------------------------------------------------------
 
 
